# entsoe-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml  docker-publish.yml
k8s/: entsoe-rs-deployment.yaml  entsoe-rs-ing.yaml  entsoe-rs-svc.yaml
src/: entsoe.rs  error.rs  main.rs
src/assets/: areas.rs  document_types.rs  mod.rs  process_types.rs  psr_types.rs
src/models/: error.rs  glmarketdocument.rs  mod.rs
