[package]
name = "entsoe-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6", features=["query"]}
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.17", features = ["full"] }
tower = "0.4"
utoipa = { version = "4.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "1.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "1.0.0", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
phf = { version="0.11.2", features = ["macros"] }
thiserror = "1.0.50"
eyre = "0.6.8"
reqwest = "0.11.22"
dotenvy = "0.15.7"
strum = {version="0.25.0", features=["derive"]}
quick-xml = {version="0.31.0", features=["serialize"]}
serde-xml-rs = "0.6.0"
url = "2.4.1"
chrono = "0.4.31"
